tests/ui/generic-associated-types/bugs/issue-88460.stderr
error[E0277]: the trait bound `for<'a> <_ as Trait>::Assoc<'a>: Marker` is not satisfied
  --> $DIR/issue-88460.rs:28:10
   |
LL |     test(Foo);
   |     ---- ^^^ the trait `for<'a> Marker` is not implemented for `<_ as Trait>::Assoc<'a>`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Marker` is implemented for `()`
note: this is a known limitation of the trait solver that will be lifted in the future
  --> $DIR/issue-88460.rs:28:10
   |
LL |     test(Foo);
   |     -----^^^-
   |     |    |
   |     |    the trait solver is unable to infer the generic types that should be inferred from this argument
   |     add turbofish arguments to this call to specify the types manually, even if it's redundant
note: required by a bound in `test`
  --> $DIR/issue-88460.rs:15:27
   |
LL | fn test<T>(value: T)
   |    ---- required by a bound in this function
...
LL |     for<'a> T::Assoc<'a>: Marker,
   |                           ^^^^^^ required by this bound in `test`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
